--- a/.eslintrc
+++ b/.eslintrc
@@ -33,5 +33,12 @@
     "Blob": true,
     "navigator": true
   },
-  "parser": "@babel/eslint-parser"
+  "parser": "@babel/eslint-parser",
+  "react/function-component-definition": [
+    2,
+    {
+      "namedComponents": "arrow-function",
+      "unnamedComponents": "arrow-function"
+    }
+  ]
 }
