payment with paypal

--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "private": true,
   "dependencies": {
     "@babel/eslint-parser": "^7.19.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "eslint": "^8.24.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
@@ -15,8 +12,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.8",
     "prettier": "^2.7.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.2",
+    "react-dom": "17.0.2",
+    "react-paypal-button-v2": "^2.6.3",
     "react-router-dom": "^6.4.1",
     "web-vitals": "^2.1.4"
   },
@@ -52,6 +50,7 @@
     "@svgr/webpack": "^6.3.1",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
+    "dotenv-webpack": "^8.0.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
