--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@babel/eslint-parser": "^7.19.1",
+    "@react-google-maps/api": "^2.13.1",
+    "axios": "^0.27.2",
     "eslint": "^8.24.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
