--- a/.github/workflows/deploy-to-firebase.yml
+++ b/.github/workflows/deploy-to-firebase.yml
@@ -35,3 +35,5 @@ jobs:
           args: deploy --only hosting
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          KEY_GOOGLE_MAP: ${{ secrets.KEY_GOOGLE_MAP }}
+   	      CLIENT_ID_PP: ${{ secrets.CLIENT_ID_PP }}
