--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prettier": "^2.7.1",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
+    "react-helmet": "^6.1.0",
     "react-paypal-button-v2": "^2.6.3",
     "react-router-dom": "^6.4.1",
     "web-vitals": "^2.1.4"
